# Oboe-Native-Android-Recorder

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/in/reconv/oboenative/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/in/reconv/oboenative/: DuplexStreamForegroundService.java  LiveEffectEngine.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/in/reconv/oboenative/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
oboenativemodule/: build.gradle
oboenativemodule/oboe/samples/RhythmGame/src/main/cpp/: GameConstants.h
oboenativemodule/src/main/cpp/: CMakeLists.txt  Game.cpp  Game.h  GameConstants.h  LiveEffectEngine.cpp  LiveEffectEngine.h  oboenativemodule.cpp
oboenativemodule/src/main/cpp/audio/: AAssetDataSource.cpp  AAssetDataSource.h  DataSource.h  FFMpegExtractor.h  NDKExtractor.cpp  NDKExtractor.h  Player.cpp  Player.h
oboenativemodule/src/main/cpp/utils/: UtilityFunctions.cpp
oboenativemodule/src/main/java/in/reconv/oboenativemodule/: DuplexStreamForegroundService.java  LiveEffectEngine.java  NativeLib.java
